# DE_learning

./: .gitignore  README.md  pyproject.toml
docs/: data_engineering_structure.md  roadmaps.md
sandbox/01_duckdb/data/: generate_data.py
sandbox/duckdb/: config.py  duckdb_class.py  duckdb_functions.py  duckdb_pipeline.py  duckdb_utils.py
sandbox/duckdb/notebooks/: duckdb.ipynb
sandbox/duckdb/test/: test_duckdb.py
sandbox/duckdb/test/output/: sales.db  sales_warehouse_gold.csv  sales_warehouse_gold.parquet
sandbox/spark/: spark_config.py  spark_dataType.py  spark_utils.py  test_spark.py
