[project]
name = "de-learning"
version = "1.0.0"
description = ""
authors = [
    {name = "NhatLNA",email = "anhnhat909940@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
    duckdb==0.8.3,
    numpy==1.26.4,
    pandas==2.2.4,
    pyarrow==12.0.0,
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
