[project]
name = "de-learning"
version = "1.0.0"
description = "Data engineering learning project"
authors = [
    { name = "NhatLNA", email = "anhnhat909940@gmail.com" }
]
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0,<1.4",  # DuckDB stable version
    "numpy==1.26.4",       # Numpy stable version for Python 3.11
    "pandas==2.2.3",       # Stable pandas version compatible with Python 3.11
    "pyarrow==12.0.0",     # Arrow/Parquet support
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
